--- a/min/talen/arabisch.html
+++ b/min/talen/arabisch.html
@@ -94,10 +94,10 @@
         </div>
         <div class="row linkenfoot">
             <div class="col s12 m4">
-                <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img" height="100px" width="200px"></a>
+                <a href="https://welzijnsschakels.be/"><img src="../img/Welzijnsschakel_transparant.png" alt="welzijnsschakel logo" class="responsive-img " height="100px" width="200px"></a>
             </div>
             <div class="col s12 m4 ">
-                <a href="#" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/Actie-Min-vzw-114502416757004/" class="fa fa-facebook"></a>
             </div>
             <div class="col s12 m4">
                 <a href="https://youtu.be/OJnc5VFF_OE" class="fa fa-youtube"></a>
@@ -113,7 +113,7 @@
         </ul>
         <div class="footer-copyright">
             <div class="">
-                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: GNA design</p>
+                <p class="center"> Keuzeproject 1ITF@ <a href="https://www.thomasmore.be">Thomas More</a> – prototype ontwikkeld door: <a href="../../webbureau/index.html">GNA design</a></p>
 
             </div>
         </div>
